--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@emailjs/browser": "^3.7.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
+    "ngx-lottie": "^9.1.0",
+    "ngx-spinner": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
